aboutWindow + ImpressumPage > fix background overlap issue and improve closing experience

--- a/src/css/animation.css
+++ b/src/css/animation.css
@@ -27,3 +27,21 @@
     opacity: 1;
 }
 
+.animateAboutOpacity {
+    background: rgb(207,207,207);
+    background: linear-gradient(180deg, rgba(207,207,207,0) 0%, rgba(207,207,207,0.8673844537815126) 48%, rgba(207,207,207,0.8981967787114846) 91%);  
+    width: 100vw;
+    height: 0vh;
+    position: fixed;
+    bottom: 0;
+    transition: opacity 0.5s ease-in-out;
+    opacity: 0;
+    z-index: 30;
+    overflow: hidden;
+}
+
+.animateAboutOpacity.show {
+    opacity: 1;
+    height: 100vh;
+}
+
